<resources>
    <string name="app_name">DamonTest</string>
    <string name="btn_1">简单对话框</string>
    <string name="btn_2">简单列表项对话框</string>
    <string name="btn_3">单选列表项对话框</string>
    <string name="btn_4">多选列表项对话框</string>
    <string name="btn_5">自定义列表项对话框</string>
    <string name="btn_6">自定义view对话框</string>
    <string name="user_1">用户名:</string>
    <string name="password_1">密码:</string>
    <string name="tel_1">电话号码:</string>
    <string name="btn_7">切换</string>
    <string name="btn_8">测试</string>
    <string name="c1">F00</string>
    <string name="c2">0F0</string>
    <string name="c3">00F</string>
    <string name="c4">0FF</string>
    <string name="c5">F0F</string>
    <string name="c6">FF0</string>
    <string name="c7">07F</string>
    <string name="c8">70F</string>
    <string name="c9">F70</string>
    <string name="button1">发送广播</string>
</resources>
